--- a/public/index.html
+++ b/public/index.html
@@ -51,4 +51,9 @@
     </div>
 </template>
 
+<div class="image-loader" style="display: none;">
+   <img src="../dist/dist-files/dist-images/akko.jpg" alt="">
+   <img src="../dist/dist-files/dist-images/elon.png" alt="">
+</div>
+
 </html>
