--- a/public/index.html
+++ b/public/index.html
@@ -51,9 +51,11 @@
     </div>
 </template>
 
-<div class="image-loader" style="display: none;">
+<div class="image-loader">
    <img src="../dist/dist-files/dist-images/akko.jpg" alt="">
    <img src="../dist/dist-files/dist-images/elon.png" alt="">
+   <img src="../dist/dist-files/dist-images/cross.png" alt="">
+   <img src="../dist/dist-files/dist-images/check.png" alt="">
 </div>
 
 </html>
