--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
 
                 </div>
                 <div class="game__notification" data-game-notification>
-                    <img class="game__img" data-msg data-game-img src="" alt="">      
+                    <img class="game__img" data-msg data-game-check src="../dist/dist-files/dist-images/check.png" alt="">
+                    <img class="game__img" data-msg data-game-cross src="../dist/dist-files/dist-images/cross.png" alt="">       
                     <p class="game__remain" data-game-remain>
                         
                     </p>
