--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,8 @@
                 <div class="game__layer" data-msg data-game-layer></div>
                 <div class="game__win-container" data-msg data-game-win-container>
                     <div class="game__win" >
-                        <img class="game__win-img" data-game-win src="" alt="">
+                        <img class="game__win-img" data-game-win src="../dist/dist-files/dist-images/elon.png" alt="">
+                        <img class="game__win-img" data-game-lose src="../dist/dist-files/dist-images/akko.jpg" alt="">
                     </div>
                     <h1 class="game__win-title" data-game-title></h1>
                 </div>
